--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "brainfuck-compiler",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "brainfuck compiler to JavaScript",
   "private": false,
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp-modify-file": "^0.1.0"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/gkucmierz/brainfuck.git"
