--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "brainfuck-compiler",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "brainfuck compiler to JavaScript",
   "private": false,
-  "dependencies": {},
   "devDependencies": {
+    "gulp-babel": "^6.1.2",
+    "babel-preset-es2015": "^6.18.0",
     "gulp-modify-file": "^0.1.0"
   },
   "repository": {
